Fix lammas-video position on mobile landscape.

--- a/assets/css/_myssyfarmi.scss
+++ b/assets/css/_myssyfarmi.scss
@@ -153,3 +153,10 @@ figure {
         }
     }
 }
+
+@media (orientation: landscape) and (max-width: 767px) {
+    &.site-myssyfarmi-lampaat .page-header.video-section .bg video {
+        top: 80%;
+        transform: translateX(calc((100% - 100vw) / 2)) translateY(-50%);
+    }
+}
